js262/test/language/expressions/class/elements/syntax/early-errors/grammar-static-set-meth-prototype.js


/*---
description: Static Accessor set Methods cannot be named prototype (class expression)
esid: prod-ClassElement
features: [class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Class Definitions / Static Semantics: Early Errors

    ClassElement : static MethodDefinition
        It is a Syntax Error if PropName of MethodDefinition is "prototype"

---*/


$DONOTEVALUATE();

var C = class {
  static set prototype(_) {}
};
